# carbonaltdelete-client

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
carbon_alt_delete/accounts/: accounts_module_interface.py  company_model_interface.py  user_model_interface.py
carbon_alt_delete/activities/: activities_module_interface.py  activity_category_model_interface.py  activity_group_model_interface.py
carbon_alt_delete/client/: abort.py  carbon_alt_delete_client.py  client_interface.py  connect.py  exceptions.py  model_interface.py  module_interface.py
carbon_alt_delete/comments/: comment_model_interface.py  comments_module_interface.py
carbon_alt_delete/documents/: documents_module_interface.py  s3_model_interface.py
carbon_alt_delete/emission_factors/: dataset_model_interface.py  dataset_version_model_interface.py  emission_factor_custom_model_interface.py  emission_factor_model_interface.py  emission_factor_value_model_interface.py  emission_factors_module_interface.py  value_mapping_model_interface.py
examples/: create_company_structure.py  create_inventory_entries.py  create_organizational_units.py  download_inventory_excel.py  fetch_activity_tree.py  list_all_companies.py  redirect_client_user.py  sleep_refresh_token.py  update_emission_factor_after_import.py  update_measurement_after_import.py  upload_custom_emission_factors.md  upload_custom_emission_factors.py
support/: download_report.md
usage/: cleanup_inventory.py  create_company.py  list_all_companies.py
(+73 files in other folders)
