[project]
name = "carbonaltdelete-client"
version = "v2025.03.1"
description = "Client SDK to communicate with the Carbon+Alt+Delete API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic[email]>=2.11.1",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[dependency-groups]
dev = ["black>=25.1.0", "python-dotenv>=1.1.0", "ruff>=0.11.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["carbon_alt_delete"]
